# qpyci

./: .coverage  .gitignore  README.md  prompts.md  pyproject.toml
src/qpyci/: __init__.py  cli.py  commands.py  config.py
tests/: commands_test.py
