[project]
name = "qpyci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
]

[project.scripts]
qpyci = "qpyci.cli:main"
cleanup="qpyci.commands:clean"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



