[project]
name = "qpyci"
version = "0.1.0"
description = "CI Support Script for Python"
readme = "README.md"
requires-python = ">3.9"
dependencies = [
    "typer>=0.15.1",
]

[project.scripts]
qpyci = "qpyci.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
