[project]
name = "qpyci"
version = "0.1.0"
description = "CI Support Script for Python"
readme = "README.md"
requires-python = ">3.9"
dependencies = [
    "typer>=0.15.1",
]

[project.scripts]
qpyci = "qpyci.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
lint = ["ruff>=0.8.3"]
dev = [
    "allure-pytest>=2.15.3",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "coverage-badge>=1.1.2",
]

[tool.ruff]
line-length = 120
target-version = "py39"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--durations",
    "0",
    "--cov",
    "qpyci",
]
minversion = "6.0"